[tool.poetry]
name = "assignment-11"
version = "0.1.0"
description = ""
authors = ["sakhimiras <agitayev01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
colorama = "^0.4.6"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
